invalid_label_arg_keywords_test/invalid_label_arg_keywords_test_8.src
.IPPcode24
LABEL int@5